I fixed the wrapping on the favorites page and got the modals to be more consistent with the theme.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,8 @@ h2 {
     background-color: green;
     border-radius: 10px;
     font-size: 1.5rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
 }
 
 h2,
@@ -151,13 +153,38 @@ h3 {
     color: goldenrod;
 }
 
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.reveal {
+    background-color: goldenrod;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: white;
+}
+
+
 
 .footer {
     background-image: url(https://www.free-freecell-solitaire.com/solitaire/images/backgrounds/1920x1200/green_felt.jpg);
 }
 
+.favoritesBackground {
+    background-image: url(https://t4.ftcdn.net/jpg/03/00/06/59/360_F_300065992_rFZjeJkXNh6ws8sYGGyGvhpxt7lwpgSX.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.favoritesTitle {
+    color: goldenrod;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+}
+
 .savedWorkout{
     margin: 1rem;
+    flex-wrap: wrap; 
 }
 
 
